deploy/agentregistration/service.yaml
# Copyright Contributors to the Open Cluster Management project

kind: Service
apiVersion: v1
metadata:
  name: agent-registration
  namespace: open-cluster-management
  labels:
    app: managedcluster-import-controller
  annotations:
     service.alpha.openshift.io/serving-cert-secret-name: managedcluster-import-agent-registration-serving-cert
spec:
  ports:
    - protocol: TCP
      port: 9091
      targetPort: 9091
      name: agentregistration
  type: ClusterIP
  selector:
    app: managedcluster-import-controller
