deploy/agentregistration/route.yaml
# Copyright Contributors to the Open Cluster Management project

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: agent-registration
  namespace: open-cluster-management
  labels:
    app: managedcluster-import-controller
  annotations:
      openshift.io/host.generated: "true"
spec:
  port:
    targetPort: agentregistration
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: agent-registration
